4 primeiras paginas base ok

--- a/src/page2.html
+++ b/src/page2.html
@@ -98,7 +98,7 @@
               <div class="news-left first-news-page">
                 <h3>Dente do siso: mitos e verdades</h3>
                 <p>09/03/2020</p>
-                <img src="./resources/img/A-importância-da-saúde-bucal-no-fortalecimento-da-imunidade-.png" alt="">
+                <img src="./resources/img/Foto-Blog-3.jpg" alt="">
                 <p class="text-news-left">Temidos por muitos pacientes, os terceiros molares provocam muitas dúvidas. Também conhecidos como dentes do siso, eles são os últimos dentes a nascerem e, geralmente, erupcionam entre o final da adolescência e início da vida adulta.</p>
 
                 <p>Com o objetivo de esclarecer todas as questões relacionadas aos terceiros molares, a A Clínica Oral debate os mitos e verdades do dente do siso:</p>
