--- a/src/page4.html
+++ b/src/page4.html
@@ -96,47 +96,63 @@
           <div class="blog-news">
             <div class="blog-news-left">
               <div class="news-left first-news-page">
-                <h3>Sensibilidade dentária: sintomas, causas e tratamento</h3>
-                <p>24/02/2020</p>
-                <img src="./resources/img/Foto-Blog-2-1024x576 (1).jpg" alt="">
-                <p class="text-news-left">A ingestão de alimentos muito quentes ou muito frios te causa um calafrio? </p>
+                <h3>Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</h3>
+                <p>12/02/2020</p>
+                <img src="./resources/img/Foto-Blog-1-1024x576.jpg" alt="">
+                <p class="text-news-left">No mês de fevereiro é celebrado o Dia Mundial do Combate ao Câncer. Apesar dos cânceres de próstata, mama e pulmão serem os mais comuns, os números crescentes de casos de câncer de boca têm alertado e exigido mais atenção e informação à população.</p>
 
-                <p>Se sua resposta for sim, provavelmente você está com sensibilidade dentária. Aquela sensação de choque quando o dente entra em contato com uma bebida quente ou gelada é bastante incômoda, afeta a qualidade de vida e é uma queixa bastante frequente nos consultórios. </p>
+                <p>De acordo com dados do Instituto Nacional de Câncer (INCA), o Brasil é o terceiro país com o maior número de ocorrências de câncer de boca no mundo, com cerca de 15 mil casos por ano. </p>
 
-                <p>A pergunta é: porque a sensibilidade dentária acontece? É possível tratar? Como podemos prevenir? </p>
+                <p>Entenda melhor o câncer de cavidade oral: </p>
 
-                <p>A sensibilidade dentária surge quando o esmalte do dente está desgastado e alimentos quentes, gelados, doces ou ácidos demais entram em contato com as terminações nervosas do dente, alcançando a polpa dentária. </p>
+                <strong>O que é? </strong>
+                <p>O câncer de cavidade oral, popularmente conhecido como câncer de boca, é um tumor maligno que afeta os lábios e estruturas da boca, como gengivas, bochechas, céu da boca e língua. </p>
 
-                <p>Entre as principais causas estão:</p>
+                <strong>Sintomas</strong>
+                <p>Os principais sinais que podem ser observados são: lesões na cavidade oral ou nos lábios que apresentam problemas de cicatrização, manchas, placas vermelhas ou esbranquiçadas na língua, gengiva, céu da boca ou bochecha, nódulos e caroços no pescoço, rouquidão persistente, dificuldade na mastigação ou na fala. </p>
+
+                <strong>Fatores de risco</strong>
+                <p>A maioria das causas do câncer de boca estão relacionadas a hábitos nocivos à saúde. Dados da Organização Mundial da Saúde (OMS) apontam que 90% dos casos da doença estão ligados ao consumo de cigarro e álcool. </p>
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      Biocorrosão: dieta com a ingestão de alimentos muito ácidos, como grande quantidade de refrigerantes, isotônicos ou alimentos ricos em açúcar pode causar a corrosão do esmalte dos dentes em decorrência da queda brusca do pH bucal. 
+                      Fumo: O Hospital A.C Camargo aponta que a chance de pessoas fumantes desenvolverem câncer de boca é de seis a 16 vezes maior que as não fumantes.
                     </li>
                     <li>
-                      Escovação: praticar a escovação com pressão excessiva pode gerar erosão do esmalte do dente e, consequentemente, a sensibilidade. 
+                      Álcool: o consumo de bebidas alcoólicas é um fator de risco, principalmente entre os bebedores excessivos, que bebem mais de 21 doses de álcool por semana.
                     </li>
                     <li>
-                      Fraturas: restaurações quebradas podem expor a dentina e provocar desconfortos na ingestão de alimentos quentes, frios, doces ou ácidos. 
+                      Idade: a ocorrência do câncer de cavidade oral aumenta com a idade.
                     </li>
                     <li>
-                      Retração gengival: causada por doenças como gengivite ou periodontite, a retração da gengiva deixa as raízes do dente expostas e causa a hipersensibilidade dentária. 
+                      Gênero: há maior incidência da doença em homens acima de 60 anos. É importante ressaltar que dois terços dos pacientes são homens.
                     </li>
                     <li>
-                      Doenças bucais: tanto o bruxismo quanto a gengivite podem ser fatores causadores do aparecimento da sensibilidade. 
+                      Sexo oral: a infecção pelo HPV pode causar câncer de boca.
+                    </li>
+                    <li>
+                      Exposição ao sol: o câncer de lábio acomete profissionais que trabalham ao ar livre e são expostos em excesso à radiação do sol.
+                    </li>
+                    <li>
+                      Alimentação: dietas pobres em frutas, legumes e verduras também estão associadas a0 maior risco de câncer de boca. 
                     </li>
                   </ul>
                 </div>
 
-                <p>A primeira indicação de tratamento é atuar diretamente no problema que causou a hipersensibilidade a fim de diminuir as consequências da evolução da doença bucal. Dependendo da avaliação individual do cirurgião-dentista pode ser indicado o uso de um creme dental específico para a sensibilidade. </p>
+                <strong>Tratamento</strong>
+                <p>Assim como os demais tipos de câncer, o de cavidade bucal tem maior chance de cura com o diagnóstico precoce. De forma geral, o tratamento envolve cirurgia oncológica e/ ou sessões de radioterapia. A indicação de tratamento vai depender da avaliação médica do caso.</p>
 
-                <p>Apesar de ser uma questão bastante incômoda, a sensibilidade pode ser prevenida com visitas regulares ao dentista para o check-up da saúde odontológica. Além disso, vale ressaltar que a atenção à alimentação é um fator importante de prevenção, portanto evite o consumo excessivo de doces, frutas e sucos ácidos, refrigerantes, catchup, vinagre, bebidas e alimentos muito gelados, como sorvetes, ou comidas e bebidas muito quentes, como café. </p>
+                <strong>Prevenção</strong>
+                <p>Como o câncer de cavidade oral é silencioso e, muitas vezes, indolor, a avaliação periódica do dentista é fundamental para prevenir e diagnosticar precocemente a doença. A indicação é de consultas semestrais com o cirurgião-dentista da sua preferência. </p>
+
+                <p>É importante ressaltar que o câncer de boca está muito relacionado ao estilo de vida do paciente, por este motivo é importante redobrar a atenção aos fatores de risco. </p>
+
+                <p>*Este artigo contou com o apoio de informações oficiais do INCA, Instituto A.C Camargo e OMS.</p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
-                  <a href="">Dor de Dente</a>
-                  <a href="">Sensibilidade</a>
-                  <a href="">Sensibilidade Dentária</a>
+                  <a href="">Câncer de Boca</a>
+                  <a href="">Saúde Bucal</a>
                 </div>
               </div>
 
