responsivos das pages

--- a/src/blog.html
+++ b/src/blog.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <main>
-      <header>
+      <!-- <header>
         <div>
           <nav>
             <button>ligar</button>
@@ -89,7 +89,7 @@
             </ul>
           </nav>
         </div>
-      </header>
+      </header> -->
 
       <section class="s-blog">
         <div class="container">
