--- a/src/cirurgia-ortognatica.html
+++ b/src/cirurgia-ortognatica.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <main>
-      <header>
+      <!-- <header>
         <nav class="container">
           <a href="" class="agendarHeader">
             <i class="fa-solid fa-phone"></i> Agendar Consulta</a
@@ -80,12 +80,12 @@
             <li><a href="">Contato</a></li>
           </ul>
         </nav>
-      </header>
+      </header> -->
 
       <section class="s-tratamento-base">
-        <div class="container">
+        <!-- <div class="container"> -->
           <div class="info-tratamento-base">
-            <div class="tratamento-base-left">
+            <div class="tratamento-base-left p-10">
               <div class="content-tratamentoBase-left">
                 <h2>Cirurgia Ortognática</h2>
                 <p>
@@ -136,7 +136,9 @@
               </div>
             </div>
             <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
+              <div class="img-right-tratamentoBase" style="display: flex;
+              justify-content: center;
+              align-items: center;">
                 <img
                   src="./resources/img/Restauração-Dentária-Vila-Olímpia (1).jpg"
                   alt=""
@@ -146,7 +148,7 @@
               </div>
             </div>
           </div>
-        </div>
+        <!-- </div> -->
       </section>
 
       <section class="s-equipe">
