--- a/src/contato.html
+++ b/src/contato.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <main>
-      <header>
+      <!-- <header>
         <nav class="container">
           <a href="" class="agendarHeader">
             <i class="fa-solid fa-phone"></i> Agendar Consulta</a
@@ -80,7 +80,7 @@
             <li><a href="">Contato</a></li>
           </ul>
         </nav>
-      </header>
+      </header> -->
       <section class="s-contato">
         <div class="box-contato">
           <div class="container">
@@ -89,11 +89,13 @@
                 <h1>Agendar Consulta</h1>
                 <div class="conteudo-contato-left">
                   <h3>Contatos</h3>
-                  <span
-                    ><i class="fa-brands fa-whatsapp"></i>(11) 98871-1774</span
-                  >
-                  <br />
-                  <span><i class="fa-solid fa-phone"></i>(11) 3849-8866</span>
+                  <div>
+                    <span
+                      ><i class="fa-brands fa-whatsapp"></i>(11) 98871-1774</span
+                    >
+                    <br />
+                    <span><i class="fa-solid fa-phone"></i>(11) 3849-8866</span>
+                  </div>
                   <div class="buttons-contato">
                     <a href="" class="button-contato-zap"
                       ><i class="fa-brands fa-whatsapp"></i> Enviar Whatsapp</a
