--- a/src/equipe.html
+++ b/src/equipe.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <main>
-      <header>
+      <!-- <header>
         <nav class="container">
           <a href="" class="agendarHeader">
             <i class="fa-solid fa-phone"></i> Agendar Consulta</a
@@ -80,7 +80,7 @@
             <li><a href="">Contato</a></li>
           </ul>
         </nav>
-      </header>
+      </header> -->
       <section class="s-equipe">
         <div class="container">
           <h2>Equipe</h2>
