--- a/src/blog.html
+++ b/src/blog.html
@@ -92,7 +92,7 @@
       </header> -->
 
       <section class="s-blog">
-        <div class="container">
+        <!-- <div class="container"> -->
           <div class="blog-news">
             <div class="blog-news-left">
               <div class="news-left first-news-page">
@@ -199,9 +199,9 @@
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
-                <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
-                >
+                <div class="call">
+                  <a class="button-wpp" href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta" onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"><i class="fa fa-whatsapp"></i> Agendar Consulta</a>
+                </div>
               </div>
 
               <div class="search-blog">
@@ -254,7 +254,7 @@
               </a>
             </div>
           </div>
-        </div>
+        <!-- </div> -->
       </section>
 
 
